# obs-studio

plugins/: CMakeLists.txt
plugins/obs-vst3/: CMakeLists.txt  EditorWidget.cpp  EditorWidget.h  VST3Plugin.cpp  VST3Plugin.h  obs-vst3.cpp
